fix: wrap chip selectors in quotes

--- a/styles/youtube/catppuccin.user.css
+++ b/styles/youtube/catppuccin.user.css
@@ -1400,13 +1400,13 @@
     }
 
     /* selected chip color */
-    [chip-style=STYLE_DEFAULT].selected .chip-container, [chip-style=STYLE_HOME_FILTER].selected .chip-container, [chip-style=STYLE_COLOR_RED].selected .chip-container, [chip-style=STYLE_COLOR_GREEN].selected .chip-container, [chip-style=STYLE_COLOR_BLUE].selected .chip-container {
+    [chip-style="STYLE_DEFAULT"].selected .chip-container, [chip-style="STYLE_HOME_FILTER"].selected .chip-container, [chip-style="STYLE_COLOR_RED"].selected .chip-container, [chip-style="STYLE_COLOR_GREEN"].selected .chip-container, [chip-style="STYLE_COLOR_BLUE"].selected .chip-container {
       color: @crust;
       background-color: @accent-color;
     }
 
     /* normal chip */
-    [chip-style=STYLE_DEFAULT] .chip-container, [chip-style=STYLE_HOME_FILTER] .chip-container, [chip-style=STYLE_REFRESH_TO_NOVEL_CHIP] .chip-container, [chip-style=STYLE_COLOR_RED] .chip-container, [chip-style=STYLE_COLOR_GREEN] .chip-container, [chip-style=STYLE_COLOR_BLUE] .chip-container {
+    [chip-style="STYLE_DEFAULT"] .chip-container, [chip-style="STYLE_HOME_FILTER"] .chip-container, [chip-style="STYLE_REFRESH_TO_NOVEL_CHIP"] .chip-container, [chip-style="STYLE_COLOR_RED"] .chip-container, [chip-style="STYLE_COLOR_GREEN"] .chip-container, [chip-style="STYLE_COLOR_BLUE"] .chip-container {
       color: @text;
       background-color: @surface0;
     }
